Added header and article continuation links * article continuation links are injected into the summary paragraph ** changed article summary transformation `02_augment/articles.xsl` accordingly * added CSS styling based on my blog header style

--- a/source/99_result/main.css
+++ b/source/99_result/main.css
@@ -1,9 +1,9 @@
 body{font:1em Droid Sans,sans-serif,Verdana,Arial,FreeSans;color:#272828}
 #content{max-width:45em;margin:auto}
-h1{width:100%;border-bottom:0.2em solid #e3e8e8}
 a{text-decoration:underline;color:#272828}
 a:hover{color:black}
-h2{font-size:1.3em;text-decoration:none;color:#272828;font-weight:bold}
+h1{margin:.5em 0;border-bottom:.2em solid #e3e8e8}
+h2{margin:0;font-size:1.3em;color:#272828;font-weight:bold}
 h2 a{text-decoration:none}
 h3{font-size:1.2em;color:#F80;font-weight:bold;margin-bottom:.2em;border-bottom:.1em solid #e3e8e8}
 h3 span{font-size:0.9em;color:#272828;font-weight:normal}
@@ -15,3 +15,9 @@ dt {float:left;clear:left;width:7em}
 dd {padding-bottom:0.75em}
 .info{font-size:.8em;margin-bottom:.5em;display:block}
 .info a{margin:0 .1em 0 .1em}
+.menuhead{border-bottom:0.2em solid #e3e8e8;overflow:hidden;padding-top:1.5em}
+.menuhead h2{float:left}
+.menuhead ul {float:right}
+.menuhead ul li{float:left;list-style-type:none;padding:0 .2em}
+.menuhead ul li a{text-decoration:none;color:#272828;background:#e3e8e8;border-radius:.3em;padding:.2em}
+.menuhead ul li a:hover{text-decoration:underline}
