--- a/source/99_result/main.css
+++ b/source/99_result/main.css
@@ -7,9 +7,9 @@ h1 a, h2 a{text-decoration:none}
 h3{font-size:1.2em;color:#F80;font-weight:bold;margin-bottom:.2em;border-bottom:.1em solid #e3e8e8}
 h3 span{font-size:0.9em;color:#272828;font-weight:normal}
 h3 a{text-decoration:none}
-p{margin:0 0 .5em 0;text-align:justify}
-ul{margin:0;text-align:justify}
-ul li{list-style-type:circle}
+p{margin:0 0 .5em 0;text-align:justify;line-height:1.5em}
+ul{margin:0}
+ul li{list-style-type:circle;padding:.1em 0 .1em 0}
 code{margin:0 .1em;padding:0 .5em;border:.1em solid #e3e8e8;background-color:#f8f8f8;border-radius:.3em}
 .info{font-size:.8em;margin-bottom:.5em;display:block}
 .info a{margin:0 .1em 0 .1em}
