--- a/source/99_result/main.css
+++ b/source/99_result/main.css
@@ -1,4 +1,4 @@
-body{font:1em Droid Sans,Verdana,Arial,sans-serif,FreeSans;color:#272828}
+body{font:1em sans-serif;color:#272828}
 a{text-decoration:underline;color:#272828}
 a:hover{color:black}
 h1, h2{margin:0;color:#272828;font-weight:bold}
