--- a/source/99_result/main.css
+++ b/source/99_result/main.css
@@ -14,6 +14,7 @@ pre{padding:1em;border-radius:.75em;color:#f8f8f2;background:#272822;white-space
 #content{max-width:45em;margin:auto}
 #introduction{margin-top:1.5em;overflow:hidden}
 #introduction img{border-radius:0.5em;margin-right:1.5em;float:left;width:12em;height:12em}
+#introduction p{width:31.5em;float:right}
 #introduction .greeting{font-size:1.3em;font-weight:bold;float:left;margin-right:0.5em}
 .info{font-size:.8em;margin-bottom:.5em;display:block}
 .info a{margin:0 .1em 0 .1em}
@@ -27,4 +28,5 @@ pre{padding:1em;border-radius:.75em;color:#f8f8f2;background:#272822;white-space
 .menuhead ul li:last-child{margin-right:0}
 .menuhead ul li a{text-decoration:none;color:#272828;padding:.2em}
 .menuhead ul li a:hover{text-decoration:underline}
-@media screen and (max-width:32em){.menuhead:first-child{margin-top:0}.menuhead ul {float:none;clear:both;padding:.1em 0 .2em 0}}
+@media screen and (max-width:46em){#introduction p{width:auto;float:none}}
+@media screen and (max-width:32em){.menuhead:first-child{margin-top:0}.menuhead ul {float:none;clear:both;padding:.1em 0 .2em 0}#introduction img{display:block;margin:0 auto 1em;float:none}}
