--- a/source/99_result/main.css
+++ b/source/99_result/main.css
@@ -1,6 +1,7 @@
 body{font:1em sans-serif;color:#272828}
 a{text-decoration:underline;color:#272828}
 a:hover{color:black}
+a.more{font-family:"Segoe UI Symbol",sons-serif}/*edge workaround*/
 h1, h2{margin:0;color:#272828;font-weight:bold}
 h1 a, h2 a{text-decoration:none}
 h3{font-size:1.2em;color:#F80;font-weight:bold;margin-bottom:.2em;border-bottom:.1em solid #e3e8e8}
