--- a/source/99_result/main.css
+++ b/source/99_result/main.css
@@ -12,6 +12,8 @@ ul{margin:0;overflow:hidden}
 ul li{list-style-type:circle;line-height:1.5em}
 code{margin:0 .1em;padding:0 .5em;border:.1em solid #e3e8e8;background-color:#f8f8f8;border-radius:.3em}
 pre{padding:1em;border-radius:.75em;color:#f8f8f2;background:#272822;white-space:pre-wrap}
+sup{vertical-align:baseline;position:relative;top:-0.4em}
+sub{vertical-align:baseline;position:relative;top:0.4em}
 #content{max-width:45em;margin:auto}
 #introduction{margin-top:1.5em;overflow:hidden}
 #introduction img{border-radius:0.5em;margin-right:1.5em;float:left;width:12em;height:12em}
